# gnim

./: .gitignore  CREDITS.md  Cargo.toml  README.md  eslint.config.js  eslint.config.ts  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scripts.nu  tsconfig.bin.json  tsconfig.json  tsconfig.lib.json
.github/workflows/: lint.yml  publish.yml  vitepress.yml
cli/: Cargo.toml
cli/src/: main.rs  types.rs
docs/: dbus.md  gobject.md  index.md  jsx.md  package.json  polyfills.md  state.md  typescript.md  vitepress.config.ts
docs/.vitepress/: config.ts
docs/article/: assets.md  buildable.md  cli.md  comparisons.md  dev.md  devserver.md  gvariant.md  layershell.md
docs/reference/: dbus.md  gobject.md  jsx.md  primitives.md  schemas.md  typescript.md
docs/tutorial/: app.md  gnim.md  gobject.md  gtk.md  i18n.md  intro.md  packaging.md
gnim/: eslint.config.ts  package.json  tsconfig.json
gnim/src/: fetch.ts  gobject.ts  util.ts
lib/: dbus.ts  dev.ts  element.ts  fetch.ts  flow.ts  gobject.ts  gstate.ts  index.ts  jsx-dev-runtime.ts  jsx-runtime.ts  render.ts  schema.ts  scope.ts  state.ts  util.ts
lib/decorators/: dbus.ts  gobject.ts
lib/gtk3/: jsx-runtime.ts
lib/gtk4/: jsx-runtime.ts
lib/jsx/: dev.ts  element.ts  flow.ts  gstate.ts  jsx.ts  reactive.ts  render.ts  scope.ts  state.ts
lib/renderer/: gtk4.ts
lib/schema/: settings.ts
lib/schemas/: settings.ts
scripts/: build.sh
src/: context.ts  dbus.ts  esbuild-blueprint.mjs  fetch.ts  gobject.ts  index.ts  index.tsx  jsx-runtime.ts  resource.xml  state.ts  style.ts  util.ts  variant.ts
src/gnome/: index.ts  jsx-runtime.ts
types/: Cargo.toml  package.json
types/src/: lib.rs  main.rs
types/src/cli/: args.rs  mod.rs
types/src/generator/: cache.rs  generate.rs  mod.rs  overrides.rs  render.rs
types/src/generator/element/: alias.rs  callable.rs  callback.rs  class.rs  constant.rs  doc.rs  enumeration.rs  function.rs  gtype.rs  mod.rs  record.rs
types/src/generator/lib/: gjs.d.ts  mod.rs
types/src/generator/overrides/: GLib-2.0.d.ts  GObject-2.0.d.ts  Gio-2.0.d.ts  Gtk.d.ts
types/src/generator/templates/: class.jinja  enumeration.jinja  interface.jinja  introspection.jinja  repository.jinja
types/src/parser/: grammar.rs  mod.rs
(+25 files in other folders)
