[package]
name = "gnim"
version = "2.0.0-alpha.0"
edition = "2024"
license = "MIT"
description = "Gnim CLI"
homepage = "https://gnim.aylur.dev/"
repository = "https://github.com/aylur/gnim"
include = ["/bin/gnim.rs", "/bin/command"]

[dependencies]
clap = { version = "4", features = ["derive"] }
quick-xml = "0"
colored = "3"
girgen = "0.2.10"
rolldown = { git = "https://github.com/rolldown/rolldown" }
tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "gnim"
path = "bin/gnim.rs"
